# BlurDemo

./: README.md
hello-gl2/: local.properties
hello-gl2/app/: build.gradle
hello-gl2/app/src/main/cpp/: BlurOnlyRender.cpp  BlurOnlyRender.h  BlurRenderEngine.cpp  BlurRenderEngine.h  CMakeLists.txt  CircleRender.cpp  CircleRender.h  CubeRenderEngine.cpp  CubeRenderEngine.h  DataArrayRenderEngine.cpp  DataArrayRenderEngine.h  DrawArrayRenderEngine.cpp  DrawArrayRenderEngine.h  DualFilterRender.cpp  DualFilterRender.h  FastGaussianBlurRender.cpp  FastGaussianBlurRender.h  GLES20Utils.cpp  GLES20Utils.h  GaussianBlurRender.cpp  GaussianBlurRender.h  RenderEngine.cpp  RenderEngine.h  RoundBlurRender.cpp  RoundBlurRender.h  RoundBlurRender2.cpp  RoundBlurRender2.h  TwoStepGaussianBlurRender.cpp  TwoStepGaussianBlurRender.h  VBORenderEngine.cpp  VBORenderEngine.h  gl_code.cpp
hello-gl2/app/src/main/cpp/glm/: CMakeLists.txt
hello-gl2/app/src/main/java/com/android/gl2jni/: GL2JNILib.java  GL2JNIView.java
